--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -18,6 +18,8 @@
         android:id="@+id/quote_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/blue_3E78FF"
+        android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">
 
@@ -26,25 +28,54 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp">
 
+            <ImageView
+                android:id="@+id/ic_start_quote"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_quote"
+                app:layout_constraintBottom_toTopOf="@id/quote_content_tv"
+                app:layout_constraintEnd_toEndOf="@+id/quote_content_tv"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@id/quote_content_tv" />
+
+            <ImageView
+                android:id="@+id/ic_ending_quote"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:contentDescription="@string/todo"
+                android:src="@drawable/ic_end_quote"
+                app:layout_constraintEnd_toEndOf="@id/quote_content_tv"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/quote_content_tv"
+                app:layout_constraintTop_toBottomOf="@id/quote_content_tv" />
+
             <TextView
                 android:id="@+id/quote_author_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:layout_margin="10dp"
+                android:fontFamily="@font/beautiful_people"
+                android:gravity="bottom|end"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.925"
-                app:layout_constraintStart_toEndOf="@+id/quote_date_tv"
+                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintTop_toBottomOf="@id/ic_ending_quote"
+                app:layout_constraintVertical_bias="1"
                 tools:text="The Author" />
 
             <TextView
                 android:id="@+id/quote_content_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:textSize="16sp"
+                android:fontFamily="@font/beauty_mountains"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="A friend in need is a friend indeed" />
@@ -55,11 +86,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|bottom"
                 android:layout_margin="10dp"
-                android:textSize="13sp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/quote_content_tv"
-                app:layout_constraintStart_toStartOf="parent"
+                android:fontFamily="@font/autobus"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/quote_author_tv"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:text="12/02/1995" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
