--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,21 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/charactersFragment">
+    app:startDestination="@id/quotesFragment">
 
     <fragment
-        android:id="@+id/charactersFragment"
+        android:id="@+id/quotesFragment"
         android:name="com.ihebchiha.hiltapp.ui.view.fragments.all_quotes.QuotesFragment"
         android:label="Characters"
         tools:layout="@layout/fragment_quotes" >
         <action
-            android:id="@+id/action_charactersFragment_to_characterDetailFragment"
-            app:destination="@id/characterDetailFragment" />
+            android:id="@+id/action_quotesFragment_to_quoteDetailFragment"
+            app:destination="@id/quoteDetailsFragment" />
 
     </fragment>
     <fragment
-        android:id="@+id/characterDetailFragment"
+        android:id="@+id/quoteDetailsFragment"
         android:name="com.ihebchiha.hiltapp.ui.view.fragments.QuoteDetailsFragment"
-        android:label="Character Detail"
-        tools:layout="@layout/fragment_quote_details" />
+        android:label="Quote Details"
+        tools:layout="@layout/fragment_quote_details" >
+        <action app:id="@+id/goback" app:destination="@id/quotesFragment"
+            />
+    </fragment>
 </navigation>
