adding new features

--- a/app/src/main/res/layout/error_layout.xml
+++ b/app/src/main/res/layout/error_layout.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
         <TextView
             android:id="@+id/messageTV"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/autobus"
             android:textColor="@android:color/white"
