--- a/app/src/main/res/drawable/view_error_message_rounded_corners.xml
+++ b/app/src/main/res/drawable/view_error_message_rounded_corners.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:topRightRadius="@dimen/cornersRadius" android:topLeftRadius="@dimen/cornersRadius"/>
-    <solid android:color="@color/green41f27a" />
+    <solid android:color="@color/redf04c22" />
 </shape>
