--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.view.activities.login.ui.login.LoginActivity">
 
+    <FrameLayout
+        android:id="@+id/registerFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
@@ -58,12 +66,25 @@
         android:padding="10dp"
         android:layout_margin="20dp"
         android:fontFamily="@font/lemonmilkmedium"
-        android:text="@string/action_sign_in"
+        android:text="@string/action_sign_in_short"
         android:textColor="@android:color/black"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="@id/password"
         app:layout_constraintEnd_toEndOf="@id/password"
         app:layout_constraintTop_toBottomOf="@+id/password"
         tools:layout_editor_absoluteX="32dp" />
+
+    <TextView
+        android:id="@+id/forgot_pwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forgotpwd"
+        android:textSize="11sp"
+        android:fontFamily="@font/lemonmilkmedium"
+        android:textColor="@android:color/black"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/login"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <ProgressBar
         android:id="@+id/loading"
@@ -88,4 +109,25 @@
         android:orientation="horizontal"
         app:layout_constraintVertical_bias="0.75"
         app:layout_constraintGuide_begin="40dp" />
+
+    <ImageView
+        android:id="@+id/goToRegisterPage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_up"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintBottom_toTopOf="@id/register_indication_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/register_indication_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/swipe_up_to_register"
+        android:textColor="@android:color/black"
+        android:fontFamily="@font/lemonmilkmedium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
