--- a/app/src/main/res/layout/fragment_quote_details.xml
+++ b/app/src/main/res/layout/fragment_quote_details.xml
@@ -26,7 +26,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
+            android:src="@drawable/ic_arrow_back"
             app:layout_constraintStart_toStartOf="@id/avatarContainer"
             app:layout_constraintTop_toTopOf="@id/avatarContainer"
             android:contentDescription="@string/todo" />
