--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,4 +26,7 @@
             app:destination="@id/quotesFragment"
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
+
+    <fragment android:id="@+id/profileFragment" android:name="com.ihebchiha.hiltapp.ui.view.fragments.profile.ProfileFragment"
+        android:label="Profile" tools:layout="@layout/profile_fragment"/>
 </navigation>
