--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,54 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/registerFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/aim"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.view.activities.login.ui.login.LoginActivity">
+    android:background="@drawable/believe"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
-        android:id="@+id/registerFragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
     <EditText
         android:id="@+id/username"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginStart="25dp"
+        android:layout_gravity="start"
         android:hint="@string/prompt_email"
+        android:textStyle="bold"
+        android:textSize="@dimen/subTitleSize"
         android:inputType="textEmailAddress"
         android:background="@android:color/transparent"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/black"
-        android:fontFamily="@font/lemonmilkbold"
-        android:selectAllOnFocus="true"
-        app:layout_constraintTop_toTopOf="@id/guideline"
-        app:layout_constraintBottom_toTopOf="@id/password"
-        app:layout_constraintEnd_toEndOf="@id/password"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/password" />
+        android:selectAllOnFocus="true"/>
 
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="25dp"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
+        android:textSize="@dimen/subTitleSize"
+        android:textStyle="bold"
         android:background="@android:color/transparent"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/black"
-        android:fontFamily="@font/lemonmilkbold"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
@@ -60,31 +48,26 @@
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center|top"
         android:background="@drawable/button_rounded_corners_bg"
         android:enabled="false"
         android:padding="10dp"
-        android:layout_margin="20dp"
-        android:fontFamily="@font/lemonmilkmedium"
+        android:layout_marginTop="150dp"
         android:text="@string/action_sign_in_short"
-        android:textColor="@android:color/black"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="@id/password"
-        app:layout_constraintEnd_toEndOf="@id/password"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        tools:layout_editor_absoluteX="32dp" />
+        android:textStyle="bold"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/forgot_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forgotpwd"
-        android:textSize="11sp"
-        android:fontFamily="@font/lemonmilkmedium"
+        android:textSize="14sp"
+        android:layout_gravity="end"
         android:textColor="@android:color/black"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toBottomOf="@id/login"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_marginTop="205dp"
+        android:layout_marginEnd="25dp"
+        />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -95,39 +78,10 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        android:visibility="gone" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintVertical_bias="0.75"
-        app:layout_constraintGuide_begin="40dp" />
 
-    <ImageView
-        android:id="@+id/goToRegisterPage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_up"
-        android:layout_marginBottom="10dp"
-        android:backgroundTint="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@id/register_indication_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-        android:id="@+id/register_indication_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/swipe_up_to_register"
-        android:textColor="@android:color/black"
-        android:fontFamily="@font/lemonmilkmedium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include layout="@layout/layout_register" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
