--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,14 +11,14 @@
         android:id="@+id/item_all_quote"
         android:icon="@drawable/ic_quote_24"
         app:showAsAction="ifRoom"
-        android:title="@string/qotd_label" />
+        android:title="@string/all_quotes_label" />
 
     <item android:id="@+id/item_fav"
         android:icon="@drawable/ic_favorite"
         app:showAsAction="ifRoom"
         android:title="@string/favorite_label"/>
     <item
-        android:id="@+id/item_person"
+        android:id="@+id/item_profile"
         android:icon="@drawable/ic_account_circle"
         app:showAsAction="ifRoom"
         android:title="@string/profile_label" />
