--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/quotesFragment">
+    app:startDestination="@id/qotdFragment">
 
     <fragment
         android:id="@+id/quotesFragment"
@@ -13,7 +13,7 @@
         <action
             android:id="@+id/action_quotesFragment_to_quoteDetailFragment"
             app:destination="@id/quoteDetailsFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"/>
+            app:enterAnim="@anim/nav_default_enter_anim" />
 
     </fragment>
     <fragment
@@ -27,6 +27,20 @@
             app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
 
-    <fragment android:id="@+id/profileFragment" android:name="com.ihebchiha.hiltapp.ui.view.fragments.profile.ProfileFragment"
-        android:label="Profile" tools:layout="@layout/profile_fragment"/>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.ihebchiha.hiltapp.ui.view.fragments.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/profile_fragment" />
+    <fragment
+        android:id="@+id/favoritesFragment"
+        android:name="com.ihebchiha.hiltapp.ui.view.fragments.favorites.FavoritesFragment"
+        android:label="Favorites"
+        tools:layout="@layout/favorites_fragment" />
+
+    <fragment
+        android:id="@+id/qotdFragment"
+        android:name="com.ihebchiha.hiltapp.ui.view.fragments.qotd.QuoteOfTheDayFragment"
+        android:label="QOTD"
+        tools:layout="@layout/quote_of_the_day_fragment" />
 </navigation>
