--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,9 +8,9 @@
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="25dp"
         android:layout_gravity="start"
@@ -27,7 +27,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="25dp"
         android:hint="@string/prompt_password"
@@ -44,29 +44,29 @@
         app:layout_constraintStart_toStartOf="@id/username"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
-    <Button
+    <TextView
         android:id="@+id/login"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
-        android:background="@drawable/button_rounded_corners_bg"
-        android:enabled="false"
+        android:layout_height="35dp"
+        android:layout_gravity="end|top"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="75dp"
         android:padding="10dp"
-        android:layout_marginTop="150dp"
         android:text="@string/action_sign_in_short"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/forgot_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/forgotpwd"
+        android:gravity="end"
         android:textSize="14sp"
         android:layout_gravity="end"
         android:textColor="@android:color/black"
-        android:layout_marginTop="205dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginEnd="15dp"
         />
 
     <ProgressBar
